--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-input/number-format": "^1.0.23",
     "axios": "^1.6.7",
     "json-server": "^1.0.0-alpha.23",
     "just-shuffle": "^4.2.0",
